# usolitaire

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  PLAN.txt  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
elnandike/: app.py  game.py  ui.py
tests/: test_game.py  tests_game.py
usolitaire/: __init__.py  app.py  card.py  card_render.py  cards.py  deck.py  exceptions.py  freecell_app.py  game.py  textual_app.css  textual_app.py  textual_ui.py  ui.py  utils.py
