[project]
name = "usolitaire"
version = "1.1.0"
description = "Solitaire in your terminal"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "textual>=6.2.1",
]
classifiers=[
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
    ]

[tool.uv]
package = true

[tool.setuptools]
packages = ["usolitaire"]

[project.scripts]
usolitaire = "usolitaire.app:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 100
